Updated VidCoder to be much more friendly to screen readers.

--- a/VidCoder/Controls/SplitButton.xaml
+++ b/VidCoder/Controls/SplitButton.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Resources="clr-namespace:VidCoder.Resources"
     Loaded="SplitButton_OnLoaded"
     mc:Ignorable="d">
     <UserControl.Template>
@@ -24,7 +25,7 @@
                             Width="1"
                             Margin="0 4"
                             Fill="#111111" />
-                        <Button Click="OnArrowClick">
+                        <Button Click="OnArrowClick" AutomationProperties.Name="{x:Static Resources:CommonRes.OpenSplitButtonAutomationName}">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Grid Name="buttonGrid" Background="Transparent">
