--- a/VidCoder/View/Preview/PreviewPlaybackControls.xaml
+++ b/VidCoder/View/Preview/PreviewPlaybackControls.xaml
@@ -22,6 +22,7 @@
 		<WrapPanel Margin="4" HorizontalAlignment="Center">
 			<StackPanel Margin="0 0 20 0" Orientation="Horizontal">
 				<TextBlock
+					Name="volumeLabel"
 					VerticalAlignment="Center"
 					Foreground="Black"
 					Text="{x:Static res:PreviewRes.VolumeSliderLabel}" />
@@ -29,6 +30,7 @@
 					Width="100"
 					Margin="3 0 0 0"
 					VerticalAlignment="Center"
+					AutomationProperties.LabeledBy="{Binding ElementName=volumeLabel}"
 					Maximum="1"
 					Minimum="0"
 					Value="{Binding Volume}" />
@@ -37,6 +39,7 @@
 			<Button
 				Height="23"
 				Margin="0 4"
+				AutomationProperties.Name="{x:Static res:MainRes.Pause}"
 				Command="{Binding Pause}"
 				Visibility="{Binding PreviewPaused,
 				                     Converter={StaticResource InverseVisibilityConverter}}">
@@ -54,6 +57,7 @@
 			<Button
 				Height="23"
 				Margin="0 4"
+				AutomationProperties.Name="{x:Static res:MainRes.Play}"
 				Command="{Binding Play}"
 				Visibility="{Binding PreviewPaused,
 				                     Converter={StaticResource VisibilityConverter}}">
@@ -72,6 +76,7 @@
 			<Button
 				Height="23"
 				Margin="20 4 0 4"
+				AutomationProperties.Name="{x:Static res:PreviewRes.OpenInSystemPlayerButton}"
 				Command="{Binding OpenInSystemPlayer}">
 				<StackPanel Margin="4 0" Orientation="Horizontal">
 					<Image
@@ -88,6 +93,7 @@
 			<Button
 				Height="23"
 				Margin="20 4 0 4"
+				AutomationProperties.Name="{x:Static res:PreviewRes.CloseVideoButton}"
 				Command="{Binding CloseVideo}">
 				<StackPanel Margin="4 0" Orientation="Horizontal">
 					<Image
