--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -69,6 +69,7 @@
 						MinWidth="70"
 						Margin="4 0 0 0"
 						Padding="5 0"
+						AutomationProperties.Name="{x:Static res:EncodingRes.Save}"
 						Command="{Binding Save}">
 						<StackPanel Orientation="Horizontal">
 							<Image
@@ -94,6 +95,7 @@
 						Height="24"
 						MinWidth="70"
 						Padding="5 0"
+						AutomationProperties.Name="{x:Static res:EncodingRes.Revert}"
 						Command="{Binding Delete}"
 						Visibility="{Binding PickersService.SelectedPicker.Picker.IsModified,
 						                     Converter={StaticResource VisibilityConverter}}">
@@ -109,6 +111,7 @@
 						Height="24"
 						MinWidth="70"
 						Padding="5 0"
+						AutomationProperties.Name="{x:Static res:CommonRes.Delete}"
 						Command="{Binding Delete}"
 						Visibility="{Binding DeleteButtonVisible,
 						                     Converter={StaticResource VisibilityConverter}}">
@@ -387,6 +390,7 @@
 									Padding="5 0"
 									HorizontalAlignment="Left"
 									VerticalAlignment="Top"
+									AutomationProperties.Name="{x:Static res:PickerRes.AddLanguageButton}"
 									Command="{Binding AddAudioLanguage}"
 									UseLayoutRounding="True">
 									<StackPanel Orientation="Horizontal">
